2014-06-13 21:33:44 +0300 tarakbumba 

	* Bump version to 1.6 (HEAD, master)

2014-06-13 21:32:49 +0300 tarakbumba 

	* Fix openHomepage option which was not work with https URLs

2014-06-12 23:23:14 +0300 tarakbumba 

	* - Update Readme.md (origin/master, origin/HEAD)

2014-06-12 23:20:28 +0300 tarakbumba 

	* Remove generating ChangeLog from Makefile. Instead use post-commit hook from git

2014-06-12 22:47:10 +0300 tarakbumba 

	* -Fix python-polib requirement at buildtime (tag: 1.5)

2014-06-12 21:14:37 +0300 tarakbumba 

	* Bump to 1.5 version

2014-06-12 19:33:55 +0300 tarakbumba 

	* - Make Nemo actions use translations from Actions directory - Merge translations at build time - Fix configure checks for prerequisties - Update translations

2014-06-11 00:34:57 +0300 tarakbumba 

	* Fix and fully integrate Nemo filemanager support (tag: 1.4)

2014-04-10 18:14:22 +0300 tarakbumba 

	* -Add Romanian from Tx

2014-04-10 18:13:37 +0300 tarakbumba 

	* -Updated translations from Tx

2014-04-09 00:33:31 +0300 tarakbumba 

	* Added Spanish and Greek translations from tx

2014-04-09 00:30:23 +0300 tarakbumba 

	* - Translation updates and new langs from tx

2014-04-07 01:33:10 +0300 tarakbumba 

	* - Update version info - Makefile does not copy Copying, ChangeLog, Readme in /usr (tag: 1.3)

2014-04-07 01:31:01 +0300 tarakbumba 

	* - Update ChangeLog

2014-04-07 00:43:16 +0300 tarakbumba 

	* - Translations from tx

2014-04-07 00:34:45 +0300 tarakbumba 

	* - Update LINGUAS

2014-04-07 00:33:58 +0300 tarakbumba 

	* - Remove executable bits

2014-04-06 23:37:54 +0300 tarakbumba 

	* - Add new translations from tx

2013-12-30 01:17:21 +0200 tarakbumba 

	* - Add changelog generation script to maintainers : gitlog-to-changelog.sh - Add automatic generation of tuncel.pot script: makepot - Combine git-to-changelog script and desktop_translations script into one script : maintain_jobs.sh

2013-12-30 01:16:43 +0200 tarakbumba 

	* - Add git generated ChangeLog
